# ctf-platform

./: README  README.md  docker-compose.yml
backend/: .env  Cargo.toml  Dockerfile
backend/src/: main.rs
frontend/: Dockerfile  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: api.ts  auth.ts  axios.ts
frontend/src/components/: ChallengeCard.css  ChallengeCard.tsx  LeaderboardChart.css  LeaderboardChart.tsx  Sidebar.tsx  Topbar.tsx  UsersTable.css  UsersTable.tsx
frontend/src/pages/: Dashboard.css  Dashboard.tsx  Login.css  Login.tsx  Register.tsx
frontend/src/styles/: global.css
