[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls"] }
tower-http = { version = "0.5", features = ["cors"] }

bcrypt = "0.15"
jsonwebtoken = "9.3"
chrono = "0.4"

time = "=0.3.36"
time-macros = "=0.2.18"
home = "=0.5.9"